test_suite/alan-2022-examples/failing/005870_mutation.alan
source qO begin leave 50 < then 9 end
